freest/test/prog/Invalid/Typing/ExpectsTooManyArgsFun/ExpectsTooManyArgsFun.fst
module ExpectsTooManyArgsFun where

foo : Int
foo x = x
